--- a/balacne.css
+++ b/balacne.css
@@ -57,9 +57,9 @@ body {
   background: none;
   cursor: pointer;
   border-radius: 10px;
-  height: 70px;
+  height: 80px;
   margin-bottom: 15px;
-
+  align-items: center;
 
 }
 
