--- a/balacne.css
+++ b/balacne.css
@@ -201,8 +201,8 @@ display: flex;
   line-height: 90%;
 }
 
-.pustota{
-  width: 100%;
-  height: 50px;
-  border: 1px solid transparent;
-}
+/*.pustota{*/
+/*  width: 100%;*/
+/*  height: 50px;*/
+/*  border: 1px solid transparent;*/
+/*}*/
